--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+input[type=radio] + label span {
+  transition: background 0.2s, transform 0.2s;
+}
+
+input[type=radio] + label span:hover,
+input[type=radio] + label:hover span {
+  transform: scale(1.1);
+}
+
+input[type=radio]:checked + label span {
+  background-color: #000000;
+  box-shadow: 0px 0px 0px 4px white inset;
+}
+
+input[type=radio]:checked + label {
+  color: #000000;
+}
